[gd_scene load_steps=19 format=3 uid="uid://bxy3lfduguenu"]

[ext_resource type="Script" uid="uid://bfwaxus6c2i0t" path="res://scripts/spirit_spit.gd" id="1_7gjnm"]
[ext_resource type="Texture2D" uid="uid://cqntkhc7scanw" path="res://assets/sprites/ForestSpirit/go.png" id="2_g5dfh"]
[ext_resource type="Texture2D" uid="uid://dvij82epof8j3" path="res://assets/sprites/ForestSpirit/proj_hit.png" id="3_2ess6"]
[ext_resource type="Script" uid="uid://6eagvjgkh23i" path="res://scripts/enemy_projectile_hb.gd" id="4_g5dfh"]
[ext_resource type="Script" uid="uid://dd3w3luy0l2xt" path="res://scripts/projectile_hurtbox.gd" id="5_g5dfh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k3i6k"]
atlas = ExtResource("2_g5dfh")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjow5"]
atlas = ExtResource("2_g5dfh")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtwu8"]
atlas = ExtResource("2_g5dfh")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_og1eh"]
atlas = ExtResource("2_g5dfh")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_16m3r"]
atlas = ExtResource("2_g5dfh")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5xuq"]
atlas = ExtResource("2_g5dfh")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nk31"]
atlas = ExtResource("2_g5dfh")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w77lm"]
atlas = ExtResource("3_2ess6")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwnpo"]
atlas = ExtResource("3_2ess6")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfckl"]
atlas = ExtResource("3_2ess6")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5lds"]
atlas = ExtResource("3_2ess6")
region = Rect2(320, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_hh875"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3i6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjow5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtwu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16m3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5xuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nk31")
}],
"loop": true,
"name": &"go",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w77lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwnpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfckl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5lds")
}],
"loop": false,
"name": &"hit",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_drinr"]
radius = 14.0357

[node name="SpiritSpit" type="Node2D" node_paths=PackedStringArray("hitbox", "hurtbox", "anim_player") groups=["EnemyProjectile"]]
script = ExtResource("1_7gjnm")
HORIZ_VELOCITY = 250.0
GRAVITY = 13.0
hitbox = NodePath("HitBox")
hurtbox = NodePath("HurtBox")
anim_player = NodePath("AnimatedSprite2D")
metadata/_custom_type_script = "uid://dljy0sgyva0yd"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hh875")
animation = &"go"
autoplay = "go"

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("4_g5dfh")
motion_value = 16
multidirectional = true
attack_type = 3
impact = 3
is_phys_atk = false
metadata/_custom_type_script = "uid://6eagvjgkh23i"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_drinr")

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("5_g5dfh")
physical = true
metadata/_custom_type_script = "uid://dd3w3luy0l2xt"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_drinr")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
